[metadata]
name = Flask-FileShuttle
version = 0.0.1
author = nosoop
description = "Wrapper around Flask's send_file."
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nosoop/Flask-FileShuttle
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = .
python_requires = >= 3.9

install_requires =
    flask >= 0.10.1
